--- a/VPN_Monitoring/docker-compose.yml
+++ b/VPN_Monitoring/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3'
 services:
-  web:
-    image: nginx:latest
+  vpn_monitor:
+    build: .
+    container_name: vpn_monitor_app
     ports:
-      - "80:80"
+      - "5000:5000"  # Flask uygulaması bu portta çalışıyorsa
+    volumes:
+      - .:/app
+    restart: always
